-bug#0001134: update_host_status handles ping_availability incorrectly
-bug#0001143: "U" not allowed as min/max rrd value
-bug#0001158: Deleted user causes error on user log viewer
-bug#0001161: radio buttons have duplicate IDs. can easily be improved for usablility
-bug#0001164: alt attributes don't make tooltips, title attrs do (host.php)
-bug: Cacti does not guarentee RRA consolidation functions exist in RRA's.
-bug: Alert on changing logarithmic scaling removed
-bug: add_hosts.php did not accept privacy protocol
-feature: show basic rrdtool graph options on Graph Template Edit
-feature: Add additional logging to Graph Xport
-feature: Add rows dropdown to devices, graphs and data sources
-feature: Add device_id and event count to devices
-feature: Add ids to devices, graphs and data sources pages
-feature: Add database repair utility

0.8.7a
-bug#0000895: "Use Per-Data Source Value (Ignore this Value)" runs only when when checking "Allow Empty Input"
-bug#0001029: Add --autoscale-min (rrdtool 1.2.x only) and --autoscale-max (using upper AND lower limit)
-bug#0001035: Allow for --logarithmic scaling without autoscaling
-bug#0001038: Data sources in RRAs have random order, messing up predefined CDEFs
-bug#0001043: Graph Templates drop down populates with duplicates
-bug#0001046: Upgrade from 0.8.6j to 0.8.7 defaults to Authentication Method NONE
-bug#0001052: Graph template - GRINT creates CF function DEF
-bug#0001055: Invalid date format - "half hour" not the GNU Date format
-bug#0001057: SQL error when using 'Auth Method' None when no 'guest' user exists
-bug#0001058: Graph Filter dropdowns do not respect user graph permissions
-bug#0001059: Potential SQL injection vulnerability
-bug#0001060: RRDtool 1.2.15 complain for garbage characters when rrdtool_function_xport is used
-bug#0001061: cmd.php: potential call to invalid "availability_method" key on wrong hash
-bug#0001064: Log file viewer inefficient filtering uses excess memory