@@ -19,6 +19,7 @@ Cacti CHANGELOG
 -bug#0001158: Deleted user causes error on user log viewer
 -bug#0001161: radio buttons have duplicate IDs. can easily be improved for usablility
 -bug#0001164: alt attributes don't make tooltips, title attrs do (host.php)
+-bug#0001168: ALL_DATA_SOURCES_NODUPS includes DUPs? SIMILAR_DATA_SOURCES_DUPS is available again
 -bug: Cacti does not guarentee RRA consolidation functions exist in RRA's.
 -bug: Alert on changing logarithmic scaling removed
 -bug: add_hosts.php did not accept privacy protocol
